# Spandak8s

./: .gitignore  CHANGELOG.md  DOCUMENTATION-CLEANUP-COMPLETE.md  Dockerfile  MANIFEST.in  MODULE-DEPLOYMENT-IMPLEMENTATION.md  Makefile  README.md  build.bat  ensure-backend.ps1  pyproject.toml  quick-start.sh  requirements.txt  setup-powershell.ps1  setup-wsl.sh  snapcraft.yaml  spandak8s  spandak8s-with-backend.ps1  spandak8s-wrapper  spandak8s.bat  test_disable_options.py  test_helm_deploy.py
.github/workflows/: release.yml
backend/: BACKEND-FILES-EXPLANATION.md  hybrid_main.py  requirements-hybrid.txt  start-hybrid.ps1  start-simple.ps1  test_hybrid.py  test_module_deployment.py
cmd/: __init__.py  modules.py  status.py  tenants.py
config/: module-definitions.yaml
pkg/: __init__.py  api_client.py  config.py  kubernetes.py  module_definitions.py  module_detector.py
